// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`workerExtract should be able to extract key just fine 1`] = `
Object {
  "answers": Object {
    "Q1": Object {
      "value": "D",
    },
    "Q10": Object {
      "value": "C",
    },
    "Q11": Object {
      "value": "B",
    },
    "Q12": Object {
      "value": "D",
    },
    "Q13": Object {
      "value": "B",
    },
    "Q14": Object {
      "value": "A",
    },
    "Q15": Object {
      "value": "D",
    },
    "Q16": Object {
      "value": "C",
    },
    "Q17": Object {
      "value": "B",
    },
    "Q18": Object {
      "value": "A",
    },
    "Q19": Object {
      "value": "C",
    },
    "Q2": Object {
      "value": "B",
    },
    "Q20": Object {
      "value": "B",
    },
    "Q21": Object {
      "value": "A",
    },
    "Q22": Object {
      "value": "B",
    },
    "Q23": Object {
      "value": "A",
    },
    "Q24": Object {
      "value": "B",
    },
    "Q25": Object {
      "value": "A",
    },
    "Q26": Object {
      "value": "B",
    },
    "Q27": Object {
      "value": "A",
    },
    "Q28": Object {
      "value": "B",
    },
    "Q29": Object {
      "value": "D",
    },
    "Q3": Object {
      "value": "D",
    },
    "Q30": Object {
      "value": "A",
    },
    "Q31": Object {
      "value": "B",
    },
    "Q32": Object {
      "value": "A",
    },
    "Q33": Object {
      "value": "B",
    },
    "Q34": Object {
      "value": "B",
    },
    "Q35": Object {
      "value": "A",
    },
    "Q36": Object {
      "value": "C",
    },
    "Q37": Object {
      "value": "B",
    },
    "Q38": Object {
      "value": "A",
    },
    "Q39": Object {
      "value": "A",
    },
    "Q4": Object {
      "value": "A",
    },
    "Q40": Object {
      "value": "A",
    },
    "Q41": Object {
      "value": "A",
    },
    "Q42": Object {
      "value": "C",
    },
    "Q43": Object {
      "value": "A",
    },
    "Q44": Object {
      "value": "C",
    },
    "Q45": Object {
      "value": "B",
    },
    "Q46": Object {
      "value": "A",
    },
    "Q47": Object {
      "value": "C",
    },
    "Q48": Object {
      "value": "B",
    },
    "Q49": Object {
      "value": "A",
    },
    "Q5": Object {
      "value": "C",
    },
    "Q50": Object {
      "value": "D",
    },
    "Q51": Object {
      "value": "A",
    },
    "Q52": Object {
      "value": "B",
    },
    "Q53": Object {
      "value": "B",
    },
    "Q54": Object {
      "value": "D",
    },
    "Q55": Object {
      "value": "B",
    },
    "Q56": Object {
      "value": "B",
    },
    "Q57": Object {
      "value": "A",
    },
    "Q58": Object {
      "value": "D",
    },
    "Q59": Object {
      "value": "A",
    },
    "Q6": Object {
      "value": "D",
    },
    "Q60": Object {
      "value": "A",
    },
    "Q7": Object {
      "value": "C",
    },
    "Q8": Object {
      "value": "A",
    },
    "Q9": Object {
      "value": "D",
    },
  },
  "correctCount": 0,
  "id": Any<String>,
  "imageFile": Any<String>,
  "incorrectCount": 0,
  "isCompiled": false,
  "isRollNoExtracted": false,
  "marks": 0,
  "post": "",
  "questionPaperType": "",
  "rollNo": undefined,
  "skippedCount": 0,
  "testCenter": "",
  "testTime": "",
  "totalMarks": 0,
  "unattemptedCount": 0,
}
`;

exports[`workerExtract should be able to extract result just fine 1`] = `
Object {
  "answers": Object {
    "Q1": Object {
      "value": "D",
    },
    "Q10": Object {
      "value": "D",
    },
    "Q11": Object {
      "value": "C",
    },
    "Q12": Object {
      "value": "D",
    },
    "Q13": Object {
      "value": "C",
    },
    "Q14": Object {
      "value": "B",
    },
    "Q15": Object {
      "value": "A",
    },
    "Q16": Object {
      "value": "B",
    },
    "Q17": Object {
      "value": "C",
    },
    "Q18": Object {
      "value": "B",
    },
    "Q19": Object {
      "value": "C",
    },
    "Q2": Object {
      "value": "D",
    },
    "Q20": Object {
      "value": "A",
    },
    "Q21": Object {
      "value": "D",
    },
    "Q22": Object {
      "value": "D",
    },
    "Q23": Object {
      "value": "?",
    },
    "Q24": Object {
      "value": "D",
    },
    "Q25": Object {
      "value": "D",
    },
    "Q26": Object {
      "value": "C",
    },
    "Q27": Object {
      "value": "C",
    },
    "Q28": Object {
      "value": "A",
    },
    "Q29": Object {
      "value": "B",
    },
    "Q3": Object {
      "value": "C",
    },
    "Q30": Object {
      "value": "C",
    },
    "Q31": Object {
      "value": "B",
    },
    "Q32": Object {
      "value": "A",
    },
    "Q33": Object {
      "value": "D",
    },
    "Q34": Object {
      "value": "B",
    },
    "Q35": Object {
      "value": "A",
    },
    "Q36": Object {
      "value": "B",
    },
    "Q37": Object {
      "value": "C",
    },
    "Q38": Object {
      "value": "D",
    },
    "Q39": Object {
      "value": "A",
    },
    "Q4": Object {
      "value": "A",
    },
    "Q40": Object {
      "value": "B",
    },
    "Q41": Object {
      "value": "C",
    },
    "Q42": Object {
      "value": "A",
    },
    "Q43": Object {
      "value": "A",
    },
    "Q44": Object {
      "value": "C",
    },
    "Q45": Object {
      "value": "B",
    },
    "Q46": Object {
      "value": "D",
    },
    "Q47": Object {
      "value": "A",
    },
    "Q48": Object {
      "value": "C",
    },
    "Q49": Object {
      "value": "A",
    },
    "Q5": Object {
      "value": "C",
    },
    "Q50": Object {
      "value": "D",
    },
    "Q51": Object {
      "value": "D",
    },
    "Q52": Object {
      "value": "B",
    },
    "Q53": Object {
      "value": "B",
    },
    "Q54": Object {
      "value": "D",
    },
    "Q55": Object {
      "value": "D",
    },
    "Q56": Object {
      "value": "D",
    },
    "Q57": Object {
      "value": "B",
    },
    "Q58": Object {
      "value": "B",
    },
    "Q59": Object {
      "value": "D",
    },
    "Q6": Object {
      "value": "D",
    },
    "Q60": Object {
      "value": "D",
    },
    "Q7": Object {
      "value": "C",
    },
    "Q8": Object {
      "value": "A",
    },
    "Q9": Object {
      "value": "C",
    },
  },
  "correctCount": 0,
  "id": Any<String>,
  "imageFile": Any<String>,
  "incorrectCount": 0,
  "isCompiled": false,
  "isRollNoExtracted": true,
  "marks": 0,
  "post": "",
  "questionPaperType": "",
  "rollNo": "10023",
  "skippedCount": 0,
  "testCenter": "",
  "testTime": "",
  "totalMarks": 0,
  "unattemptedCount": 0,
}
`;

exports[`workerExtract should be able to extract result just fine 2`] = `
Object {
  "answers": Object {
    "Q1": Object {
      "value": "D",
    },
    "Q10": Object {
      "value": "?",
    },
    "Q11": Object {
      "value": "B",
    },
    "Q12": Object {
      "value": "D",
    },
    "Q13": Object {
      "value": "B",
    },
    "Q14": Object {
      "value": "A",
    },
    "Q15": Object {
      "value": "D",
    },
    "Q16": Object {
      "value": "C",
    },
    "Q17": Object {
      "value": "B",
    },
    "Q18": Object {
      "value": "A",
    },
    "Q19": Object {
      "value": "C",
    },
    "Q2": Object {
      "value": "B",
    },
    "Q20": Object {
      "value": "B",
    },
    "Q21": Object {
      "value": "A",
    },
    "Q22": Object {
      "value": "?",
    },
    "Q23": Object {
      "value": "A",
    },
    "Q24": Object {
      "value": "?",
    },
    "Q25": Object {
      "value": "A",
    },
    "Q26": Object {
      "value": "B",
    },
    "Q27": Object {
      "value": "A",
    },
    "Q28": Object {
      "value": "B",
    },
    "Q29": Object {
      "value": "D",
    },
    "Q3": Object {
      "value": "D",
    },
    "Q30": Object {
      "value": "A",
    },
    "Q31": Object {
      "value": "B",
    },
    "Q32": Object {
      "value": "A",
    },
    "Q33": Object {
      "value": "B",
    },
    "Q34": Object {
      "value": "B",
    },
    "Q35": Object {
      "value": "A",
    },
    "Q36": Object {
      "value": "C",
    },
    "Q37": Object {
      "value": "?",
    },
    "Q38": Object {
      "value": "A",
    },
    "Q39": Object {
      "value": "A",
    },
    "Q4": Object {
      "value": "A",
    },
    "Q40": Object {
      "value": "A",
    },
    "Q41": Object {
      "value": "A",
    },
    "Q42": Object {
      "value": "?",
    },
    "Q43": Object {
      "value": "A",
    },
    "Q44": Object {
      "value": "C",
    },
    "Q45": Object {
      "value": "B",
    },
    "Q46": Object {
      "value": "A",
    },
    "Q47": Object {
      "value": "?",
    },
    "Q48": Object {
      "value": "B",
    },
    "Q49": Object {
      "value": "A",
    },
    "Q5": Object {
      "value": "C",
    },
    "Q50": Object {
      "value": "D",
    },
    "Q51": Object {
      "value": "A",
    },
    "Q52": Object {
      "value": "?",
    },
    "Q53": Object {
      "value": "B",
    },
    "Q54": Object {
      "value": "D",
    },
    "Q55": Object {
      "value": "?",
    },
    "Q56": Object {
      "value": "B",
    },
    "Q57": Object {
      "value": "A",
    },
    "Q58": Object {
      "value": "D",
    },
    "Q59": Object {
      "value": "A",
    },
    "Q6": Object {
      "value": "D",
    },
    "Q60": Object {
      "value": "?",
    },
    "Q7": Object {
      "value": "C",
    },
    "Q8": Object {
      "value": "A",
    },
    "Q9": Object {
      "value": "D",
    },
  },
  "correctCount": 0,
  "id": Any<String>,
  "imageFile": Any<String>,
  "incorrectCount": 0,
  "isCompiled": false,
  "isRollNoExtracted": true,
  "marks": 0,
  "post": "",
  "questionPaperType": "",
  "rollNo": "10025",
  "skippedCount": 0,
  "testCenter": "",
  "testTime": "",
  "totalMarks": 0,
  "unattemptedCount": 0,
}
`;

exports[`workerExtract should be able to extract result just fine 3`] = `
Object {
  "answers": Object {
    "Q1": Object {
      "value": "D",
    },
    "Q10": Object {
      "value": "D",
    },
    "Q11": Object {
      "value": "C",
    },
    "Q12": Object {
      "value": "D",
    },
    "Q13": Object {
      "value": "C",
    },
    "Q14": Object {
      "value": "B",
    },
    "Q15": Object {
      "value": "A",
    },
    "Q16": Object {
      "value": "B",
    },
    "Q17": Object {
      "value": "C",
    },
    "Q18": Object {
      "value": "B",
    },
    "Q19": Object {
      "value": "C",
    },
    "Q2": Object {
      "value": "D",
    },
    "Q20": Object {
      "value": "A",
    },
    "Q21": Object {
      "value": "D",
    },
    "Q22": Object {
      "value": "D",
    },
    "Q23": Object {
      "value": "?",
    },
    "Q24": Object {
      "value": "D",
    },
    "Q25": Object {
      "value": "D",
    },
    "Q26": Object {
      "value": "C",
    },
    "Q27": Object {
      "value": "C",
    },
    "Q28": Object {
      "value": "A",
    },
    "Q29": Object {
      "value": "B",
    },
    "Q3": Object {
      "value": "C",
    },
    "Q30": Object {
      "value": "C",
    },
    "Q31": Object {
      "value": "B",
    },
    "Q32": Object {
      "value": "A",
    },
    "Q33": Object {
      "value": "D",
    },
    "Q34": Object {
      "value": "B",
    },
    "Q35": Object {
      "value": "A",
    },
    "Q36": Object {
      "value": "B",
    },
    "Q37": Object {
      "value": "C",
    },
    "Q38": Object {
      "value": "D",
    },
    "Q39": Object {
      "value": "A",
    },
    "Q4": Object {
      "value": "A",
    },
    "Q40": Object {
      "value": "B",
    },
    "Q41": Object {
      "value": "C",
    },
    "Q42": Object {
      "value": "A",
    },
    "Q43": Object {
      "value": "A",
    },
    "Q44": Object {
      "value": "C",
    },
    "Q45": Object {
      "value": "B",
    },
    "Q46": Object {
      "value": "D",
    },
    "Q47": Object {
      "value": "A",
    },
    "Q48": Object {
      "value": "C",
    },
    "Q49": Object {
      "value": "A",
    },
    "Q5": Object {
      "value": "C",
    },
    "Q50": Object {
      "value": "D",
    },
    "Q51": Object {
      "value": "D",
    },
    "Q52": Object {
      "value": "B",
    },
    "Q53": Object {
      "value": "B",
    },
    "Q54": Object {
      "value": "D",
    },
    "Q55": Object {
      "value": "D",
    },
    "Q56": Object {
      "value": "D",
    },
    "Q57": Object {
      "value": "B",
    },
    "Q58": Object {
      "value": "B",
    },
    "Q59": Object {
      "value": "D",
    },
    "Q6": Object {
      "value": "D",
    },
    "Q60": Object {
      "value": "D",
    },
    "Q7": Object {
      "value": "C",
    },
    "Q8": Object {
      "value": "A",
    },
    "Q9": Object {
      "value": "C",
    },
  },
  "correctCount": 0,
  "id": Any<String>,
  "imageFile": Any<String>,
  "incorrectCount": 0,
  "isCompiled": false,
  "isRollNoExtracted": false,
  "marks": 0,
  "post": "",
  "questionPaperType": "",
  "rollNo": undefined,
  "skippedCount": 0,
  "testCenter": "",
  "testTime": "",
  "totalMarks": 0,
  "unattemptedCount": 0,
}
`;

exports[`workerExtract should be able to extract result just fine 4`] = `
Object {
  "answers": Object {
    "Q1": Object {
      "value": "D",
    },
    "Q10": Object {
      "value": "D",
    },
    "Q11": Object {
      "value": "C",
    },
    "Q12": Object {
      "value": "D",
    },
    "Q13": Object {
      "value": "C",
    },
    "Q14": Object {
      "value": "B",
    },
    "Q15": Object {
      "value": "A",
    },
    "Q16": Object {
      "value": "B",
    },
    "Q17": Object {
      "value": "C",
    },
    "Q18": Object {
      "value": "B",
    },
    "Q19": Object {
      "value": "C",
    },
    "Q2": Object {
      "value": "D",
    },
    "Q20": Object {
      "value": "A",
    },
    "Q21": Object {
      "value": "D",
    },
    "Q22": Object {
      "value": "D",
    },
    "Q23": Object {
      "value": "?",
    },
    "Q24": Object {
      "value": "D",
    },
    "Q25": Object {
      "value": "D",
    },
    "Q26": Object {
      "value": "C",
    },
    "Q27": Object {
      "value": "C",
    },
    "Q28": Object {
      "value": "A",
    },
    "Q29": Object {
      "value": "B",
    },
    "Q3": Object {
      "value": "C",
    },
    "Q30": Object {
      "value": "C",
    },
    "Q31": Object {
      "value": "B",
    },
    "Q32": Object {
      "value": "A",
    },
    "Q33": Object {
      "value": "D",
    },
    "Q34": Object {
      "value": "B",
    },
    "Q35": Object {
      "value": "A",
    },
    "Q36": Object {
      "value": "B",
    },
    "Q37": Object {
      "value": "C",
    },
    "Q38": Object {
      "value": "D",
    },
    "Q39": Object {
      "value": "A",
    },
    "Q4": Object {
      "value": "A",
    },
    "Q40": Object {
      "value": "B",
    },
    "Q41": Object {
      "value": "C",
    },
    "Q42": Object {
      "value": "A",
    },
    "Q43": Object {
      "value": "A",
    },
    "Q44": Object {
      "value": "C",
    },
    "Q45": Object {
      "value": "B",
    },
    "Q46": Object {
      "value": "D",
    },
    "Q47": Object {
      "value": "A",
    },
    "Q48": Object {
      "value": "C",
    },
    "Q49": Object {
      "value": "A",
    },
    "Q5": Object {
      "value": "C",
    },
    "Q50": Object {
      "value": "D",
    },
    "Q51": Object {
      "value": "D",
    },
    "Q52": Object {
      "value": "B",
    },
    "Q53": Object {
      "value": "B",
    },
    "Q54": Object {
      "value": "D",
    },
    "Q55": Object {
      "value": "D",
    },
    "Q56": Object {
      "value": "D",
    },
    "Q57": Object {
      "value": "B",
    },
    "Q58": Object {
      "value": "B",
    },
    "Q59": Object {
      "value": "D",
    },
    "Q6": Object {
      "value": "D",
    },
    "Q60": Object {
      "value": "D",
    },
    "Q7": Object {
      "value": "C",
    },
    "Q8": Object {
      "value": "A",
    },
    "Q9": Object {
      "value": "C",
    },
  },
  "correctCount": 0,
  "id": Any<String>,
  "imageFile": Any<String>,
  "incorrectCount": 0,
  "isCompiled": false,
  "isRollNoExtracted": false,
  "marks": 0,
  "post": "",
  "questionPaperType": "",
  "rollNo": undefined,
  "skippedCount": 0,
  "testCenter": "",
  "testTime": "",
  "totalMarks": 0,
  "unattemptedCount": 0,
}
`;
